--- a/package.json
+++ b/package.json
@@ -1,8 +1,16 @@
 {
   "name": "nuber-server",
   "version": "1.0.0",
+  "repository": "https://github.com/Joe1220/nuber_server.git",
   "description": "Server for the (N)Uber Clone Course with Graphql, Typescript, NodeJS",
   "main": "index.js",
   "author": "joe1220",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^12.7.2",
+    "nodemon": "^1.19.1",
+    "ts-node": "^8.3.0",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.6.2"
+  }
 }
